fixing error with footer on small screens

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -123,4 +123,5 @@
 
 .footer-bg {
   background-color:rgba(244, 193, 103, 0.5);
+  margin-top: auto;
 }
